# hackathon-practice-1

./: README.md  run_create_feature.ps1  temp_feature_spec.md
.claude/agents/: backend-architect.md  ghost-writer.md
.claude/skills/docusaurus-expert/: SKILL.md
.claude/skills/rag-backend/: SKILL.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .flake8  README.md  pyproject.toml
backend/src/api/: main.py
backend/src/models/: chat_request.py
backend/src/services/: gemini_client.py  qdrant_client.py  rag_service.py
backend/tests/: test_api.py  test_rag_service.py
frontend/: .eslintrc.js  .npmignore  docusaurus.config.ts  package-lock.json  package.json
frontend/docs/: 01-introduction.md  02-variables.md  03-loops.md
frontend/src/components/: ChatWidget.tsx
frontend/src/theme/: Root.tsx
history/adr/: adr-001-technical-specificity-in-feature-spec.md
history/prompts/001-living-book-rag/: 1-complete-living-book-implementation.green.prompt.md  2-implement-backend-tests.green.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md  2-update-constitution-with-coding-standards.constitution.prompt.md
history/prompts/general/: 0001-user-query-about-available-skills.general.prompt.md  001-create-introduction-doc-for-beginners.general.prompt.md  007-create-loops-doc-for-beginners.general.prompt.md
history/prompts/living-book-rag/: 001-technical-specificity-in-feature-spec-adr.adr.prompt.md  (+5 more)
scripts/: index_book.py
specs/001-living-book-rag/: plan.md  spec.md  tasks.md
(+1 files in other folders)
